fix: Fixes a few rendering issues with the editor menu, fixes sea dragon drowning