@@ -10,7 +10,6 @@ import net.minecraft.network.chat.TranslatableComponent;
 import net.minecraft.util.Mth;
 
 import java.util.Arrays;
-import java.util.stream.Collectors;
 
 public class NewbornEditorButton extends Button{
 	private final DragonEditorScreen dragonEditorScreen;
@@ -19,7 +18,7 @@ public class NewbornEditorButton extends Button{
 		super(dragonEditorScreen.width / 2 - 180, dragonEditorScreen.guiTop - 30, 120, 20, new TranslatableComponent("ds.level.newborn"), (btn) -> {
 			dragonEditorScreen.level = DragonLevel.BABY;
 			dragonEditorScreen.dragonRender.zoom = dragonEditorScreen.level.size;
-			dragonEditorScreen.handler.getSkin().updateLayers.addAll(Arrays.stream(EnumSkinLayer.values()).distinct().collect(Collectors.toList()));
+			dragonEditorScreen.handler.getSkin().updateLayers.addAll(Arrays.stream(EnumSkinLayer.values()).distinct().toList());
 			dragonEditorScreen.update();
 		});
 		this.dragonEditorScreen = dragonEditorScreen;
@@ -34,6 +33,9 @@ public class NewbornEditorButton extends Button{
 	@Override
 	public void renderButton(PoseStack stack, int p_230431_2_, int p_230431_3_, float p_230431_4_){
 		int j = isHovered || dragonEditorScreen.level == DragonLevel.BABY ? 16777215 : 10526880;
+		stack.pushPose();
+		stack.translate(0, 0, 500);
 		TextRenderUtil.drawCenteredScaledText(stack, x + (width / 2), y + 4, 1.5f, this.getMessage().getString(), j | Mth.ceil(this.alpha * 255.0F) << 24);
+		stack.popPose();
 	}
 }
